@@ -23,6 +23,10 @@ static const char RCSID[]="$Id$";
 #include <stdlib.h>
 #include <string.h>
 #include <errno.h>
+#ifdef _WIN32
+#include <io.h>
+#include <fcntl.h>
+#endif
 #include "output.h"
 #include "extract.h"
 #include "restore.h"
@@ -96,6 +100,15 @@ main(int argc,char *argv[])
   const char *outname=NULL;
   enum data_type output_type=BASE16;
   enum data_type input_type=AUTO;
+
+#ifdef _WIN32
+  if(_setmode(_fileno(stdin),_O_BINARY)==-1)
+    {
+      fprintf(stderr,"Unable to set stdin mode to binary: %s\n",
+	      strerror(errno));
+      exit(1);
+    }
+#endif
 
   secret_key=secrets=stdin;
 
