@@ -1,3 +1,8 @@
+2009-01-27  David Shaw  <dshaw@jabberwocky.com>
+
+	* paperkey.c (main): Properly set up stdin to be in binary mode on
+	Win32.
+
 2009-01-22  David Shaw  <dshaw@jabberwocky.com>
 
 	* NEWS, configure.ac: Post-release commit.
